formated codebase and updated documentation
